[package]
name = "containerbom"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
bollard = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
git2 = "0.19.0"